--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -214,7 +214,8 @@ button:focus,
 form .form-label {
   font-size: 0.9em;
 }
-form .form-control {
+form .form-control,
+.ProseMirror {
   border: none;
   background-color: $soft-blue;
   color: $dark-blue;
@@ -4538,6 +4539,41 @@ nav {
   #storiesList #popularStories .listings-list .popular-listing {
     width: 28.07%;
   }
+}
+
+/*EDITION BAR*/
+
+.editor-bar__wrapper {
+  border: 1px solid #e7ebf5;
+  border-radius: 8px 8px 0 0;
+  padding: 5px 10px;
+}
+
+.editor-bar__wrapper button {
+  background-color: white;
+  border: none;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  margin-right: 5px;
+}
+
+.editor-bar__wrapper svg {
+  width: 22px;
+  height: 22px;
+}
+
+.form-composer__editor {
+  border-radius: 0 0 8px 8px !important;
+  overflow: hidden;
+}
+
+.form-composer__editor .ProseMirror {
+  padding: 0.575rem 0.75rem;
+}
+
+.form-composer__editor .ProseMirror img {
+  max-width: 100%;
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
