--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -147,7 +147,7 @@ h4,
 h5,
 h6 {
   color: $dark-blue;
-  font-family: "MADETommySoft-Medium", sans-serif;
+  font-family: $font-bold;
   letter-spacing: 0.2px;
 }
 
@@ -2718,6 +2718,14 @@ nav {
       font-size: 1.1em;
       line-height: 1.6em;
       color: $medium-blue;
+      max-width: 100%;
+      img {
+        width: 100%;
+        height: 600px;
+        object-fit: cover;
+        object-position: center;
+        border-radius: 8px;
+      }
     }
   }
   .listing-details-box {
@@ -4954,7 +4962,8 @@ nav {
 
 .form-composer__editor {
   border-radius: 0 0 8px 8px !important;
-  overflow: hidden;
+  overflow-y: scroll;
+  max-height: 425px;
 }
 
 .form-composer__editor .ProseMirror {
