--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4719,6 +4719,7 @@ nav {
   #homepage #hero {
     padding: 20px 0 0 0;
     overflow: hidden;
+    min-height: 673px;
   }
   #homepage #hero .wrapper {
     flex-direction: column;
