--- a/styles/PublicSquareBox.module.scss
+++ b/styles/PublicSquareBox.module.scss
@@ -57,8 +57,9 @@
 }
 
 .listingTitle {
-  font-size: 0.96em;
-  margin: 12px 0 2px 0;
+  font-size: 1.16em;
+  margin: 12px 0 5px 0;
+  line-height: 1.3;
 }
 
 .listingSubtitle {
