--- a/styles/PublicSquareBox.module.scss
+++ b/styles/PublicSquareBox.module.scss
@@ -3,7 +3,11 @@
   border: 1px solid #e7ebf5;
   border-radius: 8px;
   padding: 15px;
-  width: 25%;
+  width: 33.33%;
+  min-height: 395px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .listingBoxWrapper {
@@ -15,7 +19,7 @@
 
 .listingCover {
   border-radius: 8px;
-  height: 180px;
+  height: 200px;
   position: relative;
 }
 
@@ -57,12 +61,12 @@
 }
 
 .listingTitle {
-  font-size: 0.96em;
+  font-size: 1.2rem;
   margin: 12px 0 2px 0;
 }
 
 .listingSubtitle {
-  font-size: 0.85em;
+  font-size: 1em;
   margin: 0;
 }
 
