--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,31 +1,7 @@
-@font-face {
-  font-family: "MADETommySoft-Medium";
-  src: url("../fonts/made-tommy-soft-medium.eot");
-  src: url("../fonts/made-tommy-soft-medium.eot?#iefix")
-      format("embedded-opentype"),
-    url("../fonts/made-tommy-soft-medium.woff2") format("woff2"),
-    url("../fonts/made-tommy-soft-medium.woff") format("woff"),
-    url("../fonts/made-tommy-soft-medium.ttf") format("truetype"),
-    url("../fonts/made-tommy-soft-medium.svg#youworkforthem") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Work+Sans&display=swap");
 
-@font-face {
-  font-family: "MADETommySoft";
-  src: url("../fonts/made-tommy-soft-regular.eot");
-  src: url("../fonts/made-tommy-soft-regular.eot?#iefix")
-      format("embedded-opentype"),
-    url("../fonts/made-tommy-soft-regular.woff2") format("woff2"),
-    url("../fonts/made-tommy-soft-regular.woff") format("woff"),
-    url("../fonts/made-tommy-soft-regular.ttf") format("truetype"),
-    url("../fonts/made-tommy-soft-regular.svg#youworkforthem") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-$font-bold: "MADETommySoft-Medium";
-$font-regular: "MADETommySoft";
+$font-bold: "Playfair Display";
+$font-regular: "Work Sans";
 
 $dark-blue: #00206b;
 $medium-blue: #6376a0;
@@ -41,9 +17,8 @@ body {
   margin: 0;
   color: $dark-blue !important;
   font-size: 16px;
-  font-family: "MADETommySoft", -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
-    sans-serif !important;
+  font-family: "Work Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
 }
 
 a {
@@ -149,6 +124,7 @@ h6 {
   color: $dark-blue;
   font-family: $font-bold;
   letter-spacing: 0.2px;
+  font-weight: 600;
 }
 
 p,
@@ -534,6 +510,8 @@ nav {
       background: #fef8f2;
       border-radius: 10px;
       padding: 60px 80px;
+      justify-content: center;
+      text-align: center;
     }
     .header-col.left {
       position: inherit;
@@ -541,12 +519,11 @@ nav {
       flex: 0.7;
       .header-title {
         font-size: 2.6rem;
-        line-height: 1.15em;
+        line-height: 1.35em;
         color: $dark-blue;
       }
       .header-subtitle {
         font-size: 1.2rem;
-        max-width: 450px;
         margin-top: 15px;
         line-height: 1.5em;
         color: $medium-blue;
@@ -719,44 +696,6 @@ nav {
             p {
               max-width: 250px;
             }
-          }
-        }
-      }
-    }
-
-    .header-col.right {
-      position: absolute;
-      z-index: 0;
-      right: 80px;
-      display: flex;
-      .header-image {
-        width: 250px;
-        overflow: hidden;
-        border-radius: 8px;
-        height: auto;
-        img {
-          width: 100%;
-          height: auto;
-          object-fit: cover;
-          object-position: center;
-        }
-      }
-      .left {
-        margin-right: 30px;
-        position: relative;
-        top: 30px;
-        .header-image {
-          margin-bottom: 15px;
-        }
-      }
-      .right {
-        .header-image {
-          height: 451px;
-          img {
-            height: 100%;
-            width: auto;
-            object-fit: cover;
-            object-position: center;
           }
         }
       }
@@ -2714,7 +2653,7 @@ nav {
       margin: 25px 0;
       justify-content: space-between;
       span {
-        font-family: "MADETommySoft-Medium";
+        font-family: "Work Sans";
         margin-right: 6px;
       }
       ul {
