chore: front --> implement SSR

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,6 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Work+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Work+Sans:wght@400;500&display=swap");
 
-$font-bold: "Playfair Display";
+$font-bold: "Merriweather";
 $font-regular: "Work Sans";
 
 $dark-blue: #00206b;
@@ -125,6 +125,16 @@ h6 {
   font-family: $font-bold;
   letter-spacing: 0.2px;
   font-weight: 600;
+}
+
+h3,
+h4,
+h5,
+h6 {
+  color: $dark-blue;
+  font-family: $font-regular;
+  font-weight: 500 !important;
+  letter-spacing: 0.1px;
 }
 
 p,
@@ -704,7 +714,7 @@ nav {
   .homepage-section {
     padding: 60px 0 0 0;
     h2 {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       margin-bottom: 2px;
     }
     p {
@@ -1876,7 +1886,7 @@ nav {
 
 #listing.featured {
   border-bottom: none !important;
-  width: 33.33%;
+  width: 50%;
   margin: 10px;
   overflow: hidden;
   a {
@@ -1979,7 +1989,7 @@ nav {
       margin: 15px 0 0 0;
       font-size: 1.1em;
       width: 100%;
-      max-width: 62%;
+      max-width: 100%;
     }
     .attribution {
       margin-top: 20px;
@@ -2619,6 +2629,7 @@ nav {
       max-width: 450px;
       color: $dark-blue;
       line-height: 1.5em;
+      font-weight: bold;
     }
     .listing-owner {
       a {
@@ -2655,6 +2666,7 @@ nav {
       span {
         font-family: "Work Sans";
         margin-right: 6px;
+        font-weight: bold;
       }
       ul {
         list-style: none;
