add: front --> contact form validation

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import "components/buttons.sass";
+@import "layout/forms.sass";
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Work+Sans:wght@400;500&display=swap");
 
