--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -495,9 +495,7 @@ nav {
 
 #homepage {
   #hero {
-    padding: 50px 0 10px 0;
-    position: relative;
-    z-index: 1000;
+    height: calc(100vh - 110px);
     .wrapper {
       background: #fef8f2;
       border-radius: 10px;
@@ -654,47 +652,9 @@ nav {
           border: none;
         }
       }
-      .credits-bar {
-        width: 100%;
-        margin-top: 20px;
-        .credits-bar-wrapper {
-          display: flex;
-
-          font-size: 0.8em;
-        }
-        p,
-        a {
-          margin: 0;
-        }
-        span {
-          opacity: 0.6;
-          display: inline-block;
-          margin-bottom: 10px;
-        }
-        .sponsor-block {
-          text-align: left;
-          line-height: 1.4em;
-          a {
-            display: flex;
-            align-items: center;
-            width: 100%;
-            img {
-              object-fit: contain;
-              object-position: center;
-              width: 150px;
-              height: auto;
-              margin-right: 20px;
-            }
-            p {
-              max-width: 250px;
-            }
-          }
-        }
-      }
     }
   }
   .homepage-section {
-    padding: 60px 0 0 0;
     h2 {
       font-size: 1.5rem;
       margin-bottom: 2px;
