--- a/styles/components/buttons.sass
+++ b/styles/components/buttons.sass
@@ -11,9 +11,17 @@ $background-input: #f2f7f9
     @apply rounded-lg transition-all duration-300 ease-in-out inline-flex
 
 .button__primary
-    @apply flex items-center bg-primary-200 text-secondary-100
+    @apply inline-flex items-center bg-primary-200 text-secondary-100
     &:hover
-        @apply bg-primary-300
+        @apply bg-primary-300 text-secondary-100
+
+.button__secondary
+    @apply inline-flex items-center bg-secondary-100 text-primary-200 border border-primary-200
+    &:hover
+        @apply bg-primary-100 border-primary-100 text-secondary-100
+
+.button__lg
+ @apply py-4 px-5 text-sm
 
 .button__med
     @apply py-2.5 px-3.5 text-sm
