--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 @import "components/buttons.sass";
+@import "components/scrolldown.sass";
 @import "layout/forms.sass";
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Work+Sans:wght@400;500&display=swap");
@@ -20,18 +21,13 @@ $background-input: #f2f7f9;
 
 html,
 body {
+  scroll-behavior: smooth;
   padding: 0;
   margin: 0;
   color: $dark-blue !important;
   font-size: 16px;
   font-family: "Work Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
-}
-
-a {
-  color: $electric-blue;
-  text-decoration: none;
-  cursor: pointer !important;
 }
 
 * {
@@ -127,7 +123,7 @@ a:visited,
 a:hover,
 a:active {
   text-decoration: none !important;
-  color: $electric-blue;
+  cursor: pointer;
 }
 
 .breadcrumb {
@@ -495,7 +491,10 @@ nav {
 
 #homepage {
   #hero {
-    height: calc(100vh - 110px);
+    height: 100%;
+    @screen lg {
+      height: calc(100vh - 110px);
+    }
     .wrapper {
       background: #fef8f2;
       border-radius: 10px;
@@ -693,10 +692,6 @@ nav {
       margin: 0 -10px -10px -10px;
     }
     .listing {
-      width: 31.65%;
-      display: flex;
-      align-items: center;
-      margin: 10px;
       .image {
         width: 105px;
         height: 105px;
@@ -4609,10 +4604,6 @@ nav {
     }
   }
 
-  #homepage #hero {
-    padding: 20px 0 0 0;
-    overflow: hidden;
-  }
   #homepage #hero .wrapper {
     flex-direction: column;
     padding: 0;
