--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,7 +4,9 @@
 
 @import "components/buttons.sass";
 @import "components/scrolldown.sass";
+@import "components/listing-box.sass";
 @import "layout/forms.sass";
+@import "layout/footer.sass";
 
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@700&family=Work+Sans:wght@400;500&display=swap");
 
@@ -738,61 +740,6 @@ nav {
 
   .header-form.places .dropdown .dropdown-toggle .form-control {
     max-width: 19em !important;
-  }
-}
-
-#footer {
-  padding: 60px 0;
-  border-top: 1px solid $soft-blue;
-  .footer-intro {
-    display: flex;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-    .footer-logo {
-      margin-bottom: 12px;
-      width: 135px;
-      height: auto;
-    }
-    .footer-copyright-timestamp {
-      opacity: 0.7;
-      font-size: 0.8em;
-      display: block;
-      margin-top: 15px;
-    }
-  }
-  .footer-header {
-    font-size: 1.2em;
-    margin-bottom: 20px;
-  }
-  ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    li {
-      padding: 4px 0;
-      font-size: 0.9em;
-      line-height: 1.2em;
-      li:last-child {
-        padding-bottom: 0;
-      }
-      a {
-        color: $dark-blue;
-        transition: 0.3s;
-        svg {
-          margin-right: 8px;
-        }
-      }
-      a:hover {
-        color: $soft-blue;
-        svg {
-          stroke: $soft-blue;
-          transition: 0.3s;
-        }
-      }
-    }
-    li.disabled {
-      opacity: 0.5;
-    }
   }
 }
 
@@ -4698,12 +4645,6 @@ nav {
 
   #listing .listing-wrapper {
     padding: 0;
-  }
-
-  #footer .footer-intro,
-  #footer .footer-about,
-  #footer .footer-support {
-    margin-bottom: 20px;
   }
 
   .followBox {
