--- a/styles/app.scss
+++ b/styles/app.scss
@@ -5,6 +5,7 @@
 @import "components/buttons.sass";
 @import "components/scrolldown.sass";
 @import "components/listingsquarebox.sass";
+@import "components/modal.sass";
 @import "layout/forms.sass";
 @import "layout/footer.sass";
 
