--- a/styles/components/listingsquarebox.sass
+++ b/styles/components/listingsquarebox.sass
@@ -1,2 +1,7 @@
-.box-description
-    min-height: 188px
+.product
+    &__item 
+        img
+            @apply transition-all duration-700 ease-in-out
+    &__item:hover
+        img
+            @apply transform scale-105
