--- a/styles/layout/footer.sass
+++ b/styles/layout/footer.sass
@@ -1,14 +1,14 @@
 footer
 	border-top: 1px solid $soft-blue
 	a
-		@apply text-primary-300 transition-all duration-300 ease-in-out
+		@apply text-primary-900 transition-all duration-300 ease-in-out
 	svg
-		@apply mr-2 transition-all duration-300 ease-in-out
+		@apply mr-2 transition-all duration-300 ease-in-out text-primary-900
 
 	a:hover
-		@apply text-primary-100
+		@apply text-primary-600
 		svg
-			@apply stroke-primary-100
+			@apply stroke-primary-600
 
 	li.disabled
 		@apply hidden
