add: front --> refactor llistat activitats + allotjaments

--- a/styles/components/buttons.sass
+++ b/styles/components/buttons.sass
@@ -24,6 +24,8 @@ $background-input: #f2f7f9
 	@apply inline-flex items-center bg-transparent text-primary-400 border border-primary-300  
 	&:hover
 		@apply bg-primary-500 border-primary-500 text-white
+	&.active
+		@apply bg-primary-600 text-white border-primary-600
 	
 
 .button__lg
